# insightloop

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODE_OF_CONDUCT.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml
app/: __init__.py  analyzer.py  config.py  database.py  models.py  schemas.py  security.py  templating.py
app/ai/: __init__.py  anthropic_client.py  base.py  factory.py  mock_client.py  ollama_client.py  openai_client.py
app/routes/: __init__.py  api_feedback.py  api_insights.py  api_reports.py  pages.py
app/services/: __init__.py  feedback_service.py  insights_service.py  report_service.py
data/: sample_feedback.csv
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  PROMPTS.md
static/css/: style.css
static/js/: app.js
templates/: analyze.html  base.html  dashboard.html  feedback_list.html  index.html  login.html  reports.html
tests/: __init__.py  conftest.py  test_analyzer.py  test_insights.py  test_regressions.py  test_routes.py
