[project]
name = "insightloop"
version = "0.1.0"
description = "Self-hosted AI customer feedback analytics with sentiment, topics, urgency, dashboards, reports, and a FastAPI REST API."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "RainCherb" }]
keywords = [
    "ai",
    "analytics",
    "customer-feedback",
    "fastapi",
    "llm",
    "ollama",
    "openai",
    "product-feedback",
    "sentiment-analysis",
    "support-tickets",
    "survey-analysis",
    "voice-of-customer",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[project.urls]
Homepage = "https://github.com/RainCherb/insightloop"
Repository = "https://github.com/RainCherb/insightloop"
Issues = "https://github.com/RainCherb/insightloop/issues"
Documentation = "https://github.com/RainCherb/insightloop/tree/main/docs"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["data", "docs"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM", "PL"]
ignore = [
    "PLR0913",  # too-many-args
    "PLR0912",  # too-many-branches
    "PLR0915",  # too-many-statements
    "PLR2004",  # magic value
    "E501",     # line length
    "B008",     # FastAPI's Depends()/File() in defaults is idiomatic
    "PLC0415",  # non-top-level import (used intentionally in init_db)
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra -q"

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "main.py"]
